@@ -1,3 +1,5 @@
+looks like zope returns errors with empty result sets
+
 make re-login on startup an option
 
 ruby-on-rails support, doc
