@@ -14,6 +14,7 @@ void sqlrconnection_svr::incrementConnectionCount() {
 	// increment the counter
 	uint32_t	*connectioncount=getConnectionCountBuffer();
 	(*connectioncount)++;
+	decrementonclose=true;
 
 	#ifdef SERVER_DEBUG
 	debugPrint("connection",1,(int32_t)(*connectioncount));
@@ -39,10 +40,10 @@ void sqlrconnection_svr::decrementConnectionCount() {
 	// decrement the counter
 	uint32_t	*connectioncount=getConnectionCountBuffer();
 	(*connectioncount)--;
-	/*if ((*connectioncount)<0) {
+	if ((*connectioncount)<0) {
 		(*connectioncount)=0;
-	}*/
-	
+	}
+	decrementonclose=false;
 
 	#ifdef SERVER_DEBUG
 	debugPrint("connection",1,(int32_t)(*connectioncount));
