@@ -157,7 +157,7 @@ uint32_t sqlrconfigfile::getTtl() {
 
 bool sqlrconfigfile::getDynamicScaling() {
 	return (maxconnections>connections && growby>0 && ttl>0 &&
-					maxqueuelength<=maxlisteners);
+		(maxlisteners==-1 || maxqueuelength<=maxlisteners));
 }
 
 const char *sqlrconfigfile::getEndOfSession() {
